better byte instantiation
Signed-off-by: kristof <Kristof.Szabados@ericsson.com>